--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,18 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.5",
+    "asyncpg>=0.29.0",
     "celery>=5.5.3",
     "fastapi[all]>=0.118.0",
+    "httpx>=0.25.2",
     "passlib[bcrypt]>=1.7.4",
+    "psycopg2-binary>=2.9.9",
+    "pydantic-settings>=2.1.0",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
+    "python-jose[cryptography]>=3.3.0",
+    "redis>=5.0.1",
     "sqlalchemy>=2.0.43",
 ]
 
