--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,21 @@
-DATABASE_URL=postgresql://postgres:password@localhost:5432/products_db
+DATABASE_URL=postgresql+asyncpg://postgres:your_password@localhost:5432/your_db
+POSTGRES_DB = your_db
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = your_password
+POSTGRES_HOST = postgres
+POSTGRES_PORT = 5432
 
 REDIS_URL=redis://localhost:6379/0
 
 SECRET_KEY=your-super-secret-key-change-in-production-use-openssl-rand-hex-32
+ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-BACKEND_CORS_ORIGINS=http://localhost:3000,http://localhost:8080,http://localhost:8000
+BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8080","http://localhost:8000"]
 
 EXTERNAL_API_URL=https://dummyjson.com/products
+EXTERNAL_API_PROVIDER=dummyjson
 
+# Pagination Settings
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
