--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,19 +15,30 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install linters
+      - name: Install UV
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black isort mypy
+          source $HOME/.cargo/env
+          uv sync --group lint
 
       - name: Run Black
-        run: black --check .
+        run: |
+          source $HOME/.cargo/env
+          uv run black --check .
 
       - name: Run Isort
-        run: isort --check-only .
+        run: |
+          source $HOME/.cargo/env
+          uv run isort --check-only .
 
       - name: Run Flake8
-        run: flake8 .
+        run: |
+          source $HOME/.cargo/env
+          uv run flake8 . --max-line-length=119
 
       - name: Run Mypy
-        run: mypy .
+        run: |
+          source $HOME/.cargo/env
+          uv run mypy .
